--- a/views/user/signin.hbs
+++ b/views/user/signin.hbs
@@ -1,6 +1,5 @@
-<div class="row">
-    <div class="col-md-4 col-md-offset-4">
-        <h1>Sign In</h1>
+<div class="container">
+    <form action="/user/signin" method="post" class="form-signin">
         {{#if hasErrors}}
             <div class="alert alert-danger">
                 {{# each messages }}
@@ -8,18 +7,37 @@
                 {{/each}}
             </div>
         {{/if}}
-        <form action="/user/signin" method="post">
-            <div class="form-group">
-                <label for="email">E-Mail</label>
-                <input type="text" id="email" name="email" class="form-control">
-            </div>
-            <div class="form-group">
-                <label for="password">Password</label>
-                <input type="password" id="password" name="password" class="form-control">
-            </div>
-            <input type="hidden" name="_csrf" value="{{ csrfToken }}">
-            <button type="submit" class="btn btn-primary">Sign In</button>
-        </form>
-        <p>Don't have an account? <a href="/user/signup">Sign up instead!</a></p>
+      <div class="text-center mb-4">
+        <img class="mb-4" src="../../assets/brand/bootstrap-solid.svg" alt="" width="72" height="72">
+        <h1 class="h3 mb-3 font-weight-normal">Sign into Whogobuyam</h1>
+        <p>Sign in get your goods sold and make money as soon as possible.</p>
+      </div>
+
+      <div class="form-label-group">
+        <label for="email">E-Mail</label>
+        <input type="email" id="email" name="email" class="form-control" placeholder="Email address" required autofocus>
+      </div>
+
+      <div class="form-label-group">
+        <label for="password">Password</label>
+        <input type="password" id="password" name="password" class="form-control" placeholder="Password" required>
+      </div>
+
+      <div class="checkbox mb-3">
+        <label>
+          <input type="checkbox" value="remember-me"> Remember me
+        </label>
+      </div>
+      <input type="hidden" name="_csrf" value="{{ csrfToken }}">
+      <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
+      <br><hr>
+        <p><button class="btn btn-block btn-social btn-twitter">
+            <span class="fa fa-twitter"></span> Sign in with Twitter
+        </button>
+        <button class="btn btn-block btn-social btn-google">
+            <span class="fa fa-google"></span> Sign in with Google
+        </button>
+        </p>
+      <p class="mt-5 mb-3 text-muted text-center">Don't have an account?<a href="/user/signup">Sign up instead!</a></p>
+    </form>
     </div>
-</div>
