--- a/views/error.hbs
+++ b/views/error.hbs
@@ -2,8 +2,7 @@
 	<div class="breadcrumbs">
 		<div class="container">
 			<ol class="breadcrumb breadcrumb1 animated wow slideInLeft" data-wow-delay=".5s">
-				<li><a href="/"><span class="glyphicon glyphicon-home" aria-hidden="true"></span>Home</a></li>
-				<li class="active">Forgot Password</li>
+				<li class="active">PAGE NOT FOUND</li>
 			</ol>
 		</div>
 	</div>
@@ -14,13 +13,7 @@
 			<h2>PAGE NOT FOUND</h2>
 		
 			<div class="login-form-grids animated wow slideInUp" data-wow-delay=".5s">
-				<form>
-					<input type="email" placeholder="Email Address" required/>
-					<div class="forgot">
-						<a href="">PAGE NOT FOUND</a>
-					</div>
-					<input type="submit" value="Submit">
-				</form>
+				<h3>Page you requested is not found on this server, try other options</h3>
 			</div>
 			<h4>Want to signin?</h4>
 			<p><a href="/user/signin">Sign In Here</a> (Or) go back to <a href="/">Home<span class="glyphicon glyphicon-menu-right" aria-hidden="true"></span></a></p>
