--- a/views/user/profile.hbs
+++ b/views/user/profile.hbs
@@ -4,6 +4,7 @@
         <h1>User Profile</h1>
         <hr>
         <h2>My Orders</h2>
+        <h1><a href="/user/mystore">MYSTOREoooh</a></h1>
         {{# each orders }}
             <div class="panel panel-default">
                 <div class="panel-body">
@@ -24,7 +25,6 @@
     </div>
 </div>
 <hr>
-
 
 <div class="container-fluid">
     <div class="row">
