--- a/views/user/signup.hbs
+++ b/views/user/signup.hbs
@@ -22,7 +22,7 @@
 			<h2>Register Here</h2>
 			<div class="login-form-grids">
 				<h5>profile information</h5>
-					<form action="/user/signup" method="POST">
+					<form action="/signup" method="POST">
 				<!--	<input type="text" placeholder="Full Name" >
 					<input type="text" placeholder="User Name"  > 	-->
 					<input type="email" id="email" name="email" placeholder="Email Address" required>
