--- a/views/user/forgotpassword.hbs
+++ b/views/user/forgotpassword.hbs
@@ -12,14 +12,10 @@
 	<div class="login">
 		<div class="container">
 			<h2>Forgot Password</h2>
-		
 			<div class="login-form-grids animated wow slideInUp" data-wow-delay=".5s">
-				<form>
-					<input type="email" placeholder="Email Address" required/>
-					<div class="forgot">
-						<a href="">Forgot Password?</a>
-					</div>
-					<input type="submit" value="Submit">
+				<form action="/user/forgotpassword" method="POST">
+					<input type="email" name="email" placeholder="Email Address" required/>
+					<input type="submit" value="Reset Password">
 				</form>
 			</div>
 			<h4>Want to signin?</h4>
