--- a/views/user/signin.hbs
+++ b/views/user/signin.hbs
@@ -23,18 +23,18 @@
         {{/if}}
 		
 			<div class="login-form-grids animated wow slideInUp" data-wow-delay=".5s">
-				<form action="/user/signin" method="post">
+				<form action="/signin" method="post">
 					<input type="email" id="email" name="email" placeholder="Email Address" required autofocus/>
 					<input type="password" id="password" name="password" placeholder="Password" required autofocus/>
 					<div class="forgot">
-						<a href="/user/forgotpassword">Forgot Password?</a>
+						<a href="/forgotpassword">Forgot Password?</a>
 					</div>
-          <input type="hidden" name="_csrf" value="{{ csrfToken }}">
+          			<input type="hidden" name="_csrf" value="{{ csrfToken }}">
 					<input type="submit" value="Login">
 				</form>
 			</div>
 			<h4>For New People</h4>
-			<p><a href="/user/signup">Register Here</a> (Or) go back to <a href="/">Home<span class="glyphicon glyphicon-menu-right" aria-hidden="true"></span></a></p>
+			<p><a href="/signup">Register Here</a> (Or) go back to <a href="/">Home<span class="glyphicon glyphicon-menu-right" aria-hidden="true"></span></a></p>
 		</div>
 	</div>
 <!-- //login -->
