--- a/views/user/products.hbs
+++ b/views/user/products.hbs
@@ -112,10 +112,15 @@
 												<p>{{ this.category }}</p>
 												<h4>${{ this.price }}</h4>
 											</div>
-											<div class="snipcart-details top_brand_home_details">
+											<div style="display:flex;" class="snipcart-details top_brand_home_details">
+												<form  action="#" method="post">
+													<fieldset>
+														<input type="submit" name="submit" value="Update" class="button">
+													</fieldset>
+												</form><form>H</form>
 												<form action="#" method="post">
 													<fieldset>
-														<input type="submit" name="submit" value="Add to cart" class="button">
+														<input type="submit" name="delBtn" value="Delete" class="button">
 													</fieldset>
 												</form>
 											</div>
@@ -157,4 +162,34 @@
 <!--- household --->
 
 
-		
+<!-- IMAGE UPLOAD -->
+<script>
+	cloudinary.cloudinary_js_config()
+	$(function() {
+  if($.fn.cloudinary_fileupload !== undefined) {
+    $("input.cloudinary-fileupload[type=file]").cloudinary_fileupload();
+  }
+	});
+
+	var cloudinary_cors = "https://" + request.headers.host + "/cloudinary_cors.html";
+
+	cloudinary.v2.uploader.image_upload_tag('image_id', {callback: cloudinary_cors});
+
+	var url = require('url');
+	var url_parts = url.parse(request.url, true);
+	var query = url_parts.query;
+
+	var preloaded_file = new cloudinary.PreloadedFile(query.image_id);
+	if (preloaded_file.is_valid()) {
+	photo.image_id = preloaded_file.identifier();
+	} else {
+	throw("Invalid upload signature");
+	}
+	cloudinary.image(photo.public_id, { format: "jpg", crop: "fill", width: 120, height: 80 });
+
+</script>
+<script type="text/javascript" src="../public/javascripts/jquery.min.js"></script>
+<script type="text/javascript" src="../public/javascripts/jquery.ui.widget.js"></script>
+<script type="text/javascript" src="../public/javascripts/jquery.iframe-transport.js"></script>
+<script type="text/javascript" src="../public/javascripts/jquery.fileupload.js"></script>
+<script type="text/javascript" src="../public/javascripts/jquery.cloudinary.js"></script>
