--- a/views/user/forgotpassword.hbs
+++ b/views/user/forgotpassword.hbs
@@ -12,9 +12,9 @@
 	<div class="login">
 		<div class="container">
 			<h2>Forgot Password</h2>
-			<div class="login-form-grids animated wow slideInUp" data-wow-delay=".5s">
-				<form action="/user/forgotpassword" method="POST">
-					<input type="email" name="email" placeholder="Email Address" required/>
+			<div id="formContainer" class="login-form-grids animated wow slideInUp" data-wow-delay=".5s">
+				<form id="forgetForm" action="/forgotpassword" method="post">
+					<input type="email" id="forgetMail" name="email" placeholder="Email Address" required/>
 					<input type="submit" value="Reset Password">
 				</form>
 			</div>
@@ -23,3 +23,49 @@
 		</div>
 	</div>
 <!-- //login -->
+<script type="text/javascript" >
+/*
+$( document ).ready(function() {
+	
+	// SUBMIT FORM
+    $("#forgetForm").submit(function(event) {
+		event.preventDefault();
+		ajaxPost();
+	});
+     
+    
+    function ajaxPost(){
+    	
+    	// PREPARE FORM DATA
+    	var formData = {
+    		forgetMail : $("#forgetMail").val()
+    	}
+    	
+    	// DO POST
+    	$.ajax({
+			type : "POST",
+			contentType : "application/json",
+			url : window.location + "localhost:9000/forgotpassword",
+			data : JSON.stringify(formData),
+			dataType : 'json',
+			success : function(user) {
+				$("#formContainer").html("<p>" + 
+					"Post Successfully! <br>" + user.forgetMail +  "</p>");
+			},
+			error : function(e) {
+				alert("Error!")
+				console.log("ERROR: ", e);
+			}
+		});
+    	
+    	// Reset FormData after Posting
+    	resetData();
+ 
+    }
+    
+    function resetData(){
+    	$("#forgetMail").val("");
+    }
+})
+*/
+</script>
