--- a/views/user/profile.hbs
+++ b/views/user/profile.hbs
@@ -1,7 +1,7 @@
 <div class="container">
 <div class="row">
     <div class="col-md-8 col-md-offset-2">
-        <h1>User Profile</h1>
+        <h3>{{this.user}}</h3>
         <hr>
         <h2>My Orders</h2>
         <h1><a href="/mystore">GO TO MYSTORE</a></h1>
