--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -77,17 +77,17 @@
 							</div> 
 							<div class="collapse navbar-collapse" id="bs-megadropdown-tabs">
 								<ul class="nav navbar-nav">
-									<li class="active"><a href="/" class="act">Home </a></li>	
+									<li class="active"><a href="/" class="act">School Accessories</a></li>	
 									<!-- Mega Menu -->
 									<li class="dropdown">
-										<a href="#" class="dropdown-toggle" data-toggle="dropdown">Groceries<b class="caret"></b></a>
+										<a href="#" class="dropdown-toggle" data-toggle="dropdown">Body accessory<b class="caret"></b></a>
 										<ul class="dropdown-menu multi-column columns-3">
 											<div class="row">
 												<div class="multi-gd-img">
 													<ul class="multi-column-dropdown">
-														<h6>All Groceries</h6>
-														<li><a href="">Dals & Pulses</a></li>
-														<li><a href="">Almonds</a></li>
+														<h6>Type</h6>
+														<li><a href="">Male</a></li>
+														<li><a href="">Female</a></li>
 													</ul>
 												</div>	
 												
@@ -110,7 +110,8 @@
 											</div>
 										</ul>
 									</li>
-									<li><a href="/">Gourmet</a></li>
+									<li><a href="/">Home Appliance</a></li>
+									<li><a href="/">Random</a></li>
 								</ul>
 							</div>
 							</nav>
