--- a/views/user/reset.hbs
+++ b/views/user/reset.hbs
@@ -10,16 +10,18 @@
 <!-- //breadcrumbs -->
 <!-- login -->
 	<div class="login">
-		<div class="container">
+		<div class="container" id="container">
 			<h2>Reset Password</h2>
-			<div class="login-form-grids animated wow slideInUp" data-wow-delay=".5s">
-				<form action="/forgotpassword" method="post">
-					<input type="email" name="password" placeholder="Password" required/>
-					<input type="email" name="cpasword" placeholder="Confirm password" required/>
-					<input type="submit" value="Submit">
+			<div id="formContainer" class="login-form-grids animated wow slideInUp" data-wow-delay=".5s">
+				<form action="/forgotpassword" id="resetForm" method="post" >
+				<input type="hidden" name="_csrf" value="{{ csrfToken }}">
+					<input type="password" id="password" name="password" placeholder="Password" required/>
+                    <input type="email" id="email" name="email" placeholder="Confirm Password" required/>
+					<input type="submit" value="Reset Password">
 				</form>
 			</div>
-			<p><a href="/user/signin">Sign In Here</a> (Or) go back to <a href="/">Home<span class="glyphicon glyphicon-menu-right" aria-hidden="true"></span></a></p>
+			<h4>Want to signin?</h4>
+			<p><a href="/signin">Sign In Here</a> (Or) go back to <a href="/">Home<span class="glyphicon glyphicon-menu-right" aria-hidden="true"></span></a></p>
 		</div>
 	</div>
 <!-- //login -->
