--- a/views/partials/footer.hbs
+++ b/views/partials/footer.hbs
@@ -2,7 +2,7 @@
 <div class="footer">
 		<div class="container">
 			<div class="w3_footer_grids">
-				<div class="col-md-3 w3_footer_grid">
+				<div class="col-md-4 w3_footer_grid">
 					<h3>Contact</h3>
 					
 					<ul class="address">
@@ -11,27 +11,20 @@
 						<li><i class="glyphicon glyphicon-earphone" aria-hidden="true"></i>+1234 567 567</li>
 					</ul>
 				</div>
-				<div class="col-md-3 w3_footer_grid">
-					<h3>Information</h3>
-					<ul class="info"> 
-						<li><i class="fa fa-arrow-right" aria-hidden="true"></i><a href="/">About Us</a></li>
-						<li><i class="fa fa-arrow-right" aria-hidden="true"></i><a href="/">Contact Us</a></li>
-					</ul>
-				</div>
-				<div class="col-md-3 w3_footer_grid">
+				<div class="col-md-4 w3_footer_grid">
 					<h3>Category</h3>
 					<ul class="info"> 
-						<li><i class="fa fa-arrow-right" aria-hidden="true"></i><a href="/">Groceries</a></li>
-						<li><i class="fa fa-arrow-right" aria-hidden="true"></i><a href="/">Household</a></li>
+						<li><i class="fa fa-arrow-right" aria-hidden="true"></i><a href="/stocks">Electronics</a></li>
+						<li><i class="fa fa-arrow-right" aria-hidden="true"></i><a href="/stocks">Groceries</a></li>
+						<li><i class="fa fa-arrow-right" aria-hidden="true"></i><a href="/stocks">Body Accessories</a></li>
 					</ul>
 				</div>
-				<div class="col-md-3 w3_footer_grid">
+				<div class="col-md-4 w3_footer_grid">
 					<h3>Profile</h3>
 					<ul class="info"> 
-						<li><i class="fa fa-arrow-right" aria-hidden="true"></i><a href="/">Store</a></li>
-						<li><i class="fa fa-arrow-right" aria-hidden="true"></i><a href="/">My Cart</a></li>
-						<li><i class="fa fa-arrow-right" aria-hidden="true"></i><a href="/">Login</a></li>
-						<li><i class="fa fa-arrow-right" aria-hidden="true"></i><a href="/">Create Account</a></li>
+						<li><i class="fa fa-arrow-right" aria-hidden="true"></i><a href="/stocks">Store</a></li>
+						<li><i class="fa fa-arrow-right" aria-hidden="true"></i><a href="/signin">Login</a></li>
+						<li><i class="fa fa-arrow-right" aria-hidden="true"></i><a href="/signup">Create Account</a></li>
 					</ul>
 				</div>
 				<div class="clearfix"> </div>
