--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -2,7 +2,7 @@
 	<div class="agileits_header">
 		<div class="container">
 			<div class="w3l_offers">
-				<p><a href="/">SHOP NOW</a></p>
+				<p><a href="/stocks">SHOP NOW</a></p>
 			</div>
 			<div class="agile-login">
 				<ul>
@@ -19,7 +19,7 @@
 					{{ else }}
 					<li><a href="/signup"> Create Account </a></li>
 					<li><a href="/signin">Login</a></li>
-					<li><a href="/">Help</a></li>
+					<li><a href="/help">Contact Us</a></li>
 					{{/if}}
 
 				</ul>
@@ -77,17 +77,17 @@
 							</div> 
 							<div class="collapse navbar-collapse" id="bs-megadropdown-tabs">
 								<ul class="nav navbar-nav">
-									<li class="active"><a href="/" class="act">School Accessories</a></li>	
+									<li class="active"><a href="/stocks" class="act">School Accessories</a></li>	
 									<!-- Mega Menu -->
 									<li class="dropdown">
-										<a href="#" class="dropdown-toggle" data-toggle="dropdown">Body accessory<b class="caret"></b></a>
+										<a href="/stocks" class="dropdown-toggle" data-toggle="dropdown">Body accessory<b class="caret"></b></a>
 										<ul class="dropdown-menu multi-column columns-3">
 											<div class="row">
 												<div class="multi-gd-img">
 													<ul class="multi-column-dropdown">
 														<h6>Type</h6>
-														<li><a href="">Male</a></li>
-														<li><a href="">Female</a></li>
+														<li><a href="/stocks">Male</a></li>
+														<li><a href="/stocks">Female</a></li>
 													</ul>
 												</div>	
 												
@@ -101,8 +101,8 @@
 												<div class="multi-gd-img">
 													<ul class="multi-column-dropdown">
 														<h6>All Household</h6>
-														<li><a href="household.html">Cookware</a></li>
-														<li><a href="household.html">Dust Pans</a></li>
+														<li><a href="/stocks">Cookware</a></li>
+														<li><a href="/stocks">Dust Pans</a></li>
 													</ul>
 												</div>
 												
@@ -110,8 +110,8 @@
 											</div>
 										</ul>
 									</li>
-									<li><a href="/">Home Appliance</a></li>
-									<li><a href="/">Random</a></li>
+									<li><a href="/stocks">Home Appliance</a></li>
+									<li><a href="/stocks">Random</a></li>
 								</ul>
 							</div>
 							</nav>
