--- a/views/shop/index.hbs
+++ b/views/shop/index.hbs
@@ -322,10 +322,12 @@
 		<div class="container">
 		<h3>Brand Store</h3><br>
 			  <p class="footer-main">
-			        <span>"Whogobuy"</span> Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur
-					magni dolores eos qui ratione voluptatem sequi nesciunt.Sed ut perspiciatis unde omnis iste natus error sit voluptatem
-					accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto
-					beatae vitae dicta sunt explicabo.
+			    Creativity helps stores stand out.WhogobuyDoing something a little different can help your bottom line a lot.They build themselves on being a website that offers unique gifts.
+				great example of an online store design that stands out in the crowd.Their products are beautiful and clean.
+				‘what best suits you'. It breaks it down for the customer and makes it enjoyable to look at.stunning design. 
+				to the other shops is that they sell their products on other platforms. 
+				However,they use their website for extra design functionality and to highlight their story
+				So if you have it flaunt it, integrate your social media platforms in to your ecommerce website design.
 			  </p>
 		</div>
 	</div>
