--- a/views/user/help.hbs
+++ b/views/user/help.hbs
@@ -1,3 +1,12 @@
+<style>
+    @media screen and (max-width:500px) {  
+  .col-lg-2 {
+    display: none;
+  }
+}
+</style>
+
+
 <!-- //navigation -->
 <!-- breadcrumbs -->
 	<div class="breadcrumbs">
